@@ -1,6 +1,8 @@
 nxMyDB v2.0.0 (Not released):
   NEW: Compatibility with ioFTPD v6.8 and newer.
-  CHG: Database schema required several changes for the 25 stats sections and new fields.
+  NEW: Configuration option "Sync_Purge" to control the purge age.
+  NEW: Scheduler option to purge old entries from the changes tables.
+  CHG: Database schema required changes for the increased stats sections and new fields.
   FIX: Increase the "host" column by one character in table "io_user_hosts".
   FIX: User credits, ratio, and stats were read from the wrong columns.
 
